# PC-Parts

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
pc_parts/: categories.json  manage.py
pc_parts/pc_parts/: asgi.py  settings.py  urls.py  wsgi.py
pc_parts/products/: models.py  serializers.py  urls.py  views.py
pc_parts/products/fixtures/: brands.json  categories.json
pc_parts/products/migrations/: 0001_initial.py  0002_remove_product_brand_product_brand_id_and_more.py  0003_rename_brand_id_product_brand.py
