[tool.poetry]
name = "pc-parts"
version = "0.1.0"
description = ""
authors = ["Abdulrahman Khayat <arahman.khayat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"